feat: As a Security Server Administrator I want the diagnostics information available for global configuration and TSA to be improved so that I can more easily figure out issues with it
timestamping

refs: XRDDEV-2921